--- a/app/src/main/res/layout/activity_create_volunteer.xml
+++ b/app/src/main/res/layout/activity_create_volunteer.xml
@@ -183,7 +183,7 @@
 
 
                         <Button
-                            android:id="@+id/button"
+                            android:id="@+id/button_volunteer_signup"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="150dp"
