--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         android:layout_marginBottom="20dp"
         android:text="@string/user_ar"
         android:textSize="20sp"
-        android:visibility="invisible"
         android:backgroundTint="@color/buttonColor1"
 
         app:layout_constraintBottom_toTopOf="@+id/button_volunteer_signup"
@@ -28,7 +27,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:visibility="invisible"
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,14 +39,12 @@
         android:textColorHint="#2C2C2C"
         android:textSize="20sp"
 
-
         app:layout_constraintBottom_toTopOf="@+id/button_user_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:visibility="invisible"
         android:id="@+id/button_signin"
         android:layout_width="match_parent"
         android:layout_height="66dp"
@@ -69,7 +65,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:visibility="invisible"
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +83,6 @@
         app:layout_constraintTop_toBottomOf="@+id/button_volunteer_signup" />
 
     <Button
-        android:visibility="invisible"
         android:id="@+id/button_volunteer_signup"
         android:layout_width="match_parent"
         android:layout_height="66dp"
@@ -109,7 +103,6 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:visibility="invisible"
         android:id="@+id/imageView"
         android:layout_width="161dp"
         android:layout_height="238dp"
@@ -124,14 +117,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <ListView
-        android:id="@+id/ListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/button_openDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginBottom="173dp"
+        android:text="OPEN DB"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
 
